# ActiveLearningMaterials

./: .gitignore  README.md  RELEASE.md  apikey.txt  calc_fails.txt  crystal_data.py  lissb.csv  models.py  proxy.py  pyproject.toml  relax.py  requirements_inference.txt  requirements_materials.txt  requrements_inference.txt  run.py  sweep_graph.sh  sweep_mlp.sh  sweep_physmlp.sh  test.sh
config/: .mp20.py.swp  mp20.py
config/exps/: example.yaml
config/models/: fae.yaml  faecry.yaml  graph.yaml  mlp.yaml  phys-mlp.yaml  physmlp.yaml  pyxtal_faenet.yaml  sch.yaml
config/sbatch/: alexandre.duval.yaml  defaults.yaml  divya.sharma.yaml  schmidtv.yaml  victor.yaml
config/sweep/: sweep_graph_mbform.yaml  (+7 more)
data/: lissb.csv  mean.pt  skip.txt  std.pt
dave/: __init__.py
kmc/: sims.py
mila/: hyperparameter_tuning.sh  launch_exp.py  sbatch.py  sweep_graph.sh  sweep_graph_mbform.sh  sweep_mlp_ic.sh  sweep_mlp_mbform.sh  sweep_physmlp.sh  sweep_physmlp_mbform.sh  sweep_physmlp_mbgap.sh
notebooks/: RELEASE.md  gfn_samples.ipynb  ic_regression.ipynb  matbench_eda.ipynb  proxy_loss.ipynb  proxy_loss_bg.ipynb  proxy_loss_eform.ipynb  proxy_loss_ic.ipynb  seaborn_fig2grid.py  volume_matbench.ipynb
oracles/: sims.py
proxies/: crystal_data.py  data.py  models.py  pl_modules.py
scripts/: crossval_grid.py  data_dist.py  dummy_baselines.py  els_subdataset.py  init_data.py  make_gfn_proxy.py  make_lmdbs.py  make_matbench_lmdb.py  standard.py  structure_matcher.py
utils/: callbacks.py  crystal_data.py  ic_run.py  loaders.py  mb_data_process.py  misc.py  mp.py  parser.py
(+12429 files in other folders)
